I have completed the receipt making process